fix: display on mobile and desktop

--- a/css/small.css
+++ b/css/small.css
@@ -16,8 +16,9 @@ html {
 html, body {
 font-family: 'Sanchez', serif;
 background-color: var(--theme-color);
+height: 100%;
 }
-body { display: grid; grid-template-rows: auto 1fr auto; min-height: 120%; width: 100%;}
+body { display: grid; grid-template-rows: auto 1fr auto; max-width: 1280px; width: 100%;}
 
 :root {
   --theme-color: #ffffff;
